--- a/Institute/MainWindow.xaml
+++ b/Institute/MainWindow.xaml
@@ -2280,13 +2280,6 @@
                                         </TextBox.Resources>
                                     </TextBox>
                                     <Label Content="Email" HorizontalAlignment="Left" Margin="730,0,0,0" VerticalAlignment="Top" FontSize="20"/>
-                                    <TextBox x:Name="tbControlSearchAccessLevel" Margin="920,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="20" BorderBrush="Black" HorizontalAlignment="Left" Width="167">
-                                        <TextBox.Resources>
-                                            <Style TargetType="{x:Type Border}">
-                                                <Setter Property="CornerRadius" Value="5"/>
-                                            </Style>
-                                        </TextBox.Resources>
-                                    </TextBox>
                                     <Label Content="Уровень доступа" HorizontalAlignment="Left" Margin="920,0,0,0" VerticalAlignment="Top" FontSize="20"/>
                                     <TextBox x:Name="tbControlSearchSurname" Margin="10,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="20" BorderBrush="Black" HorizontalAlignment="Left" Width="160">
                                         <TextBox.Resources>
@@ -2304,6 +2297,17 @@
                                             </Style>
                                         </TextBox.Resources>
                                     </TextBox>
+                                    <ComboBox x:Name="tbControlSearchAccessLevel" SelectedIndex="0" Margin="924,37,0,0" Height="30" FontSize="20" BorderBrush="Black" HorizontalAlignment="Left" Width="160" VerticalAlignment="Top" >
+                                        <ComboBoxItem x:Name="defaultUserAccess">---</ComboBoxItem>
+                                        <ComboBoxItem>Full</ComboBoxItem>
+                                        <ComboBoxItem>AdmissionCommittee</ComboBoxItem>
+                                        <ComboBoxItem>ChairHead</ComboBoxItem>
+                                        <ComboBoxItem>FacultyHead</ComboBoxItem>
+                                        <ComboBoxItem>HR</ComboBoxItem>
+                                        <ComboBoxItem>minimal</ComboBoxItem>
+                                        <ComboBoxItem>Rector</ComboBoxItem>
+                                        <ComboBoxItem>teacher</ComboBoxItem>
+                                    </ComboBox>
                                 </Grid>
                             </TabItem>
                         </TabControl>
