--- a/Institute/MainWindow.xaml
+++ b/Institute/MainWindow.xaml
@@ -39,7 +39,7 @@
             </Button>
         </Grid>
         <Grid Margin="196,0,0,0">
-            <TabControl  x:Name="mainSubsystemTab">
+            <TabControl d:IsHidden="True"  x:Name="mainSubsystemTab">
                 <TabItem Header="Добавление">
                     <Grid>
                         <TabControl x:Name="tcAdd">
@@ -904,6 +904,13 @@
                                     </TextBox>
                                     <Label Content="Код" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="20"/>
                                     <Grid x:Name="gChangeEmployeeOther">
+                                        <TextBox x:Name="tbChangeEmployeeSurname" Margin="10,111,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="20" BorderBrush="Black" HorizontalAlignment="Left" Width="160">
+                                            <TextBox.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="5"/>
+                                                </Style>
+                                            </TextBox.Resources>
+                                        </TextBox>
                                         <Label Content="Фамилия" HorizontalAlignment="Left" Margin="10,74,0,0" VerticalAlignment="Top" FontSize="20"/>
                                         <TextBox x:Name="tbChangeEmployeeName" Margin="190,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="20" BorderBrush="Black" HorizontalAlignment="Left" Width="160">
                                             <TextBox.Resources>
@@ -945,13 +952,6 @@
                                             </TextBox.Resources>
                                         </TextBox>
                                         <Label Content="Email" HorizontalAlignment="Left" Margin="920,74,0,0" VerticalAlignment="Top" FontSize="20"/>
-                                        <TextBox x:Name="tbChangeEmployeeSurname" Margin="10,111,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="20" BorderBrush="Black" HorizontalAlignment="Left" Width="160">
-                                            <TextBox.Resources>
-                                                <Style TargetType="{x:Type Border}">
-                                                    <Setter Property="CornerRadius" Value="5"/>
-                                                </Style>
-                                            </TextBox.Resources>
-                                        </TextBox>
                                         <TextBox x:Name="tbChangeEmployeePost" Margin="10,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="20" BorderBrush="Black" HorizontalAlignment="Left" Width="160">
                                             <TextBox.Resources>
                                                 <Style TargetType="{x:Type Border}">
@@ -2113,11 +2113,13 @@
                     </Grid>
                 </TabItem>
             </TabControl>
-            <TabControl d:IsHidden="True"  x:Name="controlSubsystemTab">
+            <TabControl   x:Name="controlSubsystemTab">
                 <TabItem Header="Журнал">
                     <Grid Background="#FFE5E5E5">
-                        <TextBlock x:Name="tbConrolLog" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="615" Width="1103" Foreground="Black" Background="White" Margin="0,9,0,0"/>
-                        <Button x:Name="butControlLog" Content="Очистить" Margin="0,0,10,10" FontSize="20" HorizontalAlignment="Right" Width="102" VerticalAlignment="Bottom">
+                        <ScrollViewer x:Name="svControlLog" Margin="0,0,0,54">
+                            <TextBlock x:Name="tbConrolLog" TextWrapping="Wrap" Width="1086" Foreground="Black" Background="White" Margin="0,9,0,0" FontSize="20"/>
+                        </ScrollViewer>
+                        <Button x:Name="butControlLog" Content="Очистить" Margin="0,0,10,10" FontSize="20" HorizontalAlignment="Right" Width="102" VerticalAlignment="Bottom" Click="butControlLog_Click">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
